src/test/run-pass/extern/extern-pub.rs
// run-pass
// pretty-expanded FIXME #23616

extern {
    pub fn free(p: *const u8);
}

pub fn main() {
}
