src/test/compile-fail/extern-no-call.rs
// error-pattern:expected function or foreign function but found `*u8`
extern fn f() {
}

fn main() {
    f();
}